# eltorneo_backend

./: CMakeLists.txt  beat_bet.cpp  cron_main.cpp  main.cpp  privacy.html
data/: notifications.json  special.json
data/leagues/: LaLiga_colored.p22ng
managers/: MatchesManager.cpp  MatchesManager.h  PNManager.cpp  PNManager.h  PQManager.cpp  PQManager.h  UserManager.cpp  UserManager.h
routes/: AnalyticsRoute.cpp  AnalyticsRoute.h  AuthRoute.cpp  AuthRoute.h  CachedTable.cpp  CachedTable.h  ImageUtils.cpp  ImageUtils.h  League.cpp  League.h  LeaguesRoute.cpp  LeaguesRoute.h  MatchesInitializer.cpp  MatchesInitializer.h  MatchesRoute.cpp  MatchesRoute.h  PredictsRoute.cpp  PredictsRoute.h  Team.cpp  Team.h  TeamsRoute.cpp  TeamsRoute.h  UsersRoute.cpp  UsersRoute.h
stlplus/: file_system.cpp  file_system.hpp  portability_fixes.cpp  portability_fixes.hpp  wildcard.cpp  wildcard.hpp
